--- a/style.css
+++ b/style.css
@@ -1,36 +1,16 @@
-* {
-    padding: 0%;
-    margin: 0%;
-    outline: 0;
-    box-sizing: border-box;
-}
-
 body {
-    height: auto;
-    display: flex;
+    height: 100vh;
     align-items: center;
     justify-content: center;
-}
-
-.container {
-    align-items: center;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px;
-    padding: 18px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px green;
 }
 
-button {
-    font-size: 15px;
-    padding: 5px 13px;
-    font-weight: bold;
-}
-
-span {
-    font-size: 23px;
-    padding: 5px 15px;
-    border: 1px solid black;
+#box {
+    background-color: blueviolet;
+    cursor: pointer;
+    color: aliceblue;
+    width: 20rem;
+    text-align: center;
+    border-radius: 20px;
+    font-size: larger;
 }
