--- a/style.css
+++ b/style.css
@@ -1,16 +1,7 @@
-body {
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+#display {
+    color: blueviolet;
 }
 
-#box {
-    background-color: blueviolet;
-    cursor: pointer;
-    color: aliceblue;
-    width: 20rem;
-    text-align: center;
-    border-radius: 20px;
-    font-size: larger;
+#input-box {
+    font-size: 25px;
 }
